# devendra

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
example/compositions/: laptop-setup.toml  secure-machine.toml  tablet-setup.toml
example/configurations/install-package-and-run/: config.toml
example/configurations/mosquitto-localhost/: config.toml
example/configurations/package-reboot-if-requested/: config.toml
example/configurations/package-with-reboot/: config.toml
example/configurations/podman-quadlet/: config.toml  quadlet.container
example/configurations/unattended-upgrades/: config.toml
example/personas/: laptop.toml  tablet.toml
src/: agent.rs  bridge.rs  common.rs  lib.rs  server.rs
