[package]
name = "devendra"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid7 = { version = "1.4.0", features = ["serde", "uuid"] }
regex = "1"
toml = "0.8"
git2 = "0.19"
clap = { version = "4.5", features = ["derive", "env"] }
hostname = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"

[[bin]]
name = "devendra-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "devendra-bridge"
path = "src/bin/bridge.rs"

[[bin]]
name = "devendra-server"
path = "src/bin/server.rs"
